--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.4",
     "firebase": "^3.4.1",
     "jade": "~1.11.0",
+    "johnny-five": "^0.10.1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
